--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "liveServer.settings.CustomBrowser": null,
     "cSpell.words": [
+        "Authorigation",
         "discription",
         "Resumi"
     ]
